Intl guide now has guide intro and about the guide section, fixed document nav
The guide intro and about section are still just imported as HTML, don't
see too much reason to change that at the moment. document nav works with
page navigation and refreshing hash urls now.

--- a/covid-local-gatsby/src/components/Guide/Guide.module.scss
+++ b/covid-local-gatsby/src/components/Guide/Guide.module.scss
@@ -1,3 +1,23 @@
+.documentNav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0px;
+  background-color: white;
+  z-index: 2;
+  padding: 0 2rem;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  transition: 0.25s height ease;
+}
+
+.documentNav h1 {
+  margin-left: 1rem;
+  font-size: 1.2rem;
+}
+
 .guide {
   width: 100%;
 
